изменен метод getAllPlannedMeetingsByUserIdAndDatePeriodPaginated